--- a/portfolio-website/src/App.css
+++ b/portfolio-website/src/App.css
@@ -1,4 +1,16 @@
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  height: 100%;
+  margin: 0;
+}
+
 .App {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; /* Ensures the App takes at least the full height of the viewport */
   text-align: center;
   font-family: Arial, sans-serif;
   margin: 0;
@@ -27,6 +39,7 @@
 }
 
 main {
+  flex: 1; /* This allows the main content to grow and take up available space */
   padding: 20px;
   background-color: #f5f5f5;
 }
@@ -39,8 +52,6 @@ footer {
   background-color: #282c34;
   color: white;
   padding: 10px;
-  position: relative;
-  bottom: 0;
   width: 100%;
 }
 
